--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="text" id="name" placeholder="Search for a player by their last name" 
             class="mt-2 w-2/4 shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"><br/>
     
-            <button class="mt-2 bg-white text-blue-600 hover:bg-blue-600 hover:text-white text-white font-bold py-2 px-4 rounded-full"
+            <button class="mt-2 bg-white text-blue-600 hover:bg-blue-600 hover:text-white text-white font-bold py-2 px-4 rounded-md"
             onclick="search();">Search</button>
         </form>
 
