--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <button class="mt-2 bg-white text-blue-600 hover:bg-blue-600 hover:text-white text-white font-bold py-2 px-4 rounded-md"
             onclick="search();">Search</button>
         </form>
-
-        <div id="player"></div>
+        <div id="player">
+            <!--Player list will be rendered here-->
+        </div>
         
         <div id="ex1" class="modal">
             <p>Thanks for clicking. That felt good.</p>
