--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background-color: #3498db;
+            background-color: #0984e3;
         }
     </style>
 </head>
@@ -28,8 +28,7 @@
         </div>
         
         <div id="ex1" class="modal">
-            <p>Thanks for clicking. That felt good.</p>
-            <a href="#" rel="modal:close">Close</a>
+            <p>Player details go here</p>
         </div>
 
 
