--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cae0d9ff81.js" crossorigin="anonymous"></script>
 
     <style>
         body {
@@ -15,12 +16,21 @@
     </style>
 </head>
 <body>
+
+    <ul class="flex px-6 py-4 flex-items right">
+        <li class="mr-6">
+          <a class="text-blue-500 hover:text-blue-800" href="https://github.com/arminimamovic99" target="_blank"> <i class="fab fa-github fa-2x" style="color:#DDDDDD;"></i> </a>
+          <a class="text-blue-500 hover:text-blue-800 ml-3" href="https://www.linkedin.com/in/armin-imamovi%C4%87-a5aa06188/" target="_blank"> <i class="fab fa-linkedin fa-2x" style="color:#DDDDDD;"></i> </a> 
+        </li>
+        </li>
+    </ul>
+
     <div class="ml-5">
-        <form action="#">
-            <input type="text" id="name" placeholder="Search for a player by their last name" 
-            class="mt-2 w-2/4 shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"><br/>
+        <form action="#" class="mt-6" style="margin-top: -6px">
+            <input type="text" id="name" placeholder="Search for a player" 
+            class="mt-2 w-2/4 shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline shadow-lg"><br/>
     
-            <button class="mt-2 bg-white text-blue-600 hover:bg-blue-600 hover:text-white text-white font-bold py-2 px-4 rounded-md"
+            <button class="mt-2 bg-white text-blue-600 hover:bg-blue-600 hover:text-white text-white font-bold py-2 px-4 rounded-md shadow-lg"
             onclick="search();">Search</button>
         </form>
         <div id="player">
