--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <ul class="flex px-6 py-4 flex-items right">
         <li class="mr-6">
-          <a class="text-blue-500 hover:text-blue-800" href="https://github.com/arminimamovic99" target="_blank"> <i class="fab fa-github fa-2x" style="color:#DDDDDD;"></i> </a>
-          <a class="text-blue-500 hover:text-blue-800 ml-3" href="https://www.linkedin.com/in/armin-imamovi%C4%87-a5aa06188/" target="_blank"> <i class="fab fa-linkedin fa-2x" style="color:#DDDDDD;"></i> </a> 
+          <a class="text-blue-500 hover:text-blue-800" href="https://github.com/arminimamovic99" target="_blank"> <i class="fab fa-github fa-2x" style="color:#FFF;"></i> </a>
+          <a class="text-blue-500 hover:text-blue-800 ml-3" href="https://www.linkedin.com/in/armin-imamovi%C4%87-a5aa06188/" target="_blank"> <i class="fab fa-linkedin fa-2x" style="color:#FFF;"></i> </a> 
         </li>
         </li>
     </ul>
